бновил контроллеры, модели и настройки Swagger
